# commodoro

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  README.md  RUST_PORT.md  build.zig  build.zig.zon  test_input_monitoring.sh
commodoro-ffi/: Cargo.toml
commodoro-ffi/src/: lib.rs
include/: audio_rust.h  break_overlay_rust.h  commodoro_audio.h  commodoro_config.h  commodoro_input_monitor.h  commodoro_tray_icon.h  config_rust.h  dbus_rust.h  dbus_service_rust.h  input_monitor_rust.h  settings_dialog_rust.h  timer_rust.h  tray_icon_rust.h  tray_status_icon_rust.h
rust-audio/: Cargo.toml  build.rs
rust-audio/src/: lib.rs
rust-break-overlay/: Cargo.toml  build.rs
rust-break-overlay/src/: lib.rs
rust-config/: Cargo.toml  build.rs
rust-config/src/: lib.rs
rust-dbus/: Cargo.toml  build.rs
rust-dbus-service/: Cargo.toml  build.rs
rust-dbus-service/src/: lib.rs
rust-dbus/src/: lib.rs
rust-input-monitor/: Cargo.toml  build.rs
rust-input-monitor/src/: lib.rs
rust-settings-dialog/: Cargo.toml  build.rs
rust-settings-dialog/src/: lib.rs
rust-timer/: Cargo.toml  build.rs  cbindgen.toml
rust-timer/src/: lib.rs
rust-tray-icon/: Cargo.toml  build.rs
rust-tray-icon/src/: lib.rs
rust-tray-status-icon/: Cargo.toml  build.rs
rust-tray-status-icon/src/: lib.rs
src/: app.h  app.zig  audio.c  audio.h  break_overlay.c  break_overlay.h  c_workaround.zig  callbacks.h  config.c  config.h  dbus.c  dbus.h  dbus_service.c  dbus_service.h  gtk_minimal.zig  gtk_workaround.c  input_monitor.c  input_monitor.h  main.c  main.zig  settings_dialog.c  settings_dialog.h  system_tray.c  system_tray.h  timer.c  timer.h  tray_icon.c  tray_icon.h  tray_status_icon.c  tray_status_icon.h
src/audio/: audio.zig
src/config/: config_manager.zig  settings.zig
src/dbus/: dbus.c  dbus.h  dbus.zig  dbus_service.c  dbus_service.zig
src/gui/: break_overlay.zig  settings_dialog.zig  tray_icon.c  tray_icon.h  tray_icon.zig  tray_status_icon.zig
src/input/: input_monitor.c  input_monitor.h  input_monitor.zig
src/timer/: timer.zig
