[workspace]
members = [
    "rust-timer",
    "rust-config",
    "rust-audio",
    "rust-input-monitor",
    "rust-tray-icon",
    "rust-dbus",
    "commodoro-ffi"
]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 3
