[package]
name = "commodoro-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "commodoro_ffi"
crate-type = ["staticlib"]

[dependencies]
commodoro-timer = { path = "../rust-timer" }
commodoro-config = { path = "../rust-config" }
commodoro-audio = { path = "../rust-audio" }
commodoro-tray-icon = { path = "../rust-tray-icon" }
commodoro-break-overlay = { path = "../rust-break-overlay" }
commodoro-settings-dialog = { path = "../rust-settings-dialog" }