[package]
name = "commodoro-input-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "commodoro_input_monitor"

[dependencies]
libc = { workspace = true }
gtk = { version = "0.18", features = ["v3_24"] }
gdk = "0.18"
glib = "0.18"
evdev = "0.12"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
zbus = "3.15"
once_cell = "1.19"

[build-dependencies]
cbindgen = "0.26"