[package]
name = "commodoro-tray-status-icon"
version = "0.1.0"
edition = "2021"

[lib]
name = "commodoro_tray_status_icon"

[dependencies]
libc = { workspace = true }
gtk = { version = "0.18", features = ["v3_24"] }
gtk-sys = "0.18"
gdk = "0.18"
gdk-pixbuf = "0.18"
gdk-pixbuf-sys = "0.18"
cairo-rs = "0.18"
cairo-sys-rs = "0.18"
glib = "0.18"
glib-sys = "0.18"
gobject-sys = "0.18"
once_cell = "1.19"

[build-dependencies]
cbindgen = "0.26"